--- a/package.json
+++ b/package.json
@@ -12,34 +12,35 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.44.1",
-    "@trpc/next": "^10.44.1",
-    "@trpc/react-query": "^10.44.1",
-    "@trpc/server": "^10.44.1",
+    "@trpc/client": "^10.45.0",
+    "@trpc/next": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
+    "@trpc/server": "^10.45.0",
     "google-auth-library": "^8.9.0",
     "googleapis": "^120.0.0",
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.33.1",
     "superjson": "1.12.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.44.8",
-    "@types/node": "^18.19.2",
+    "@types/eslint": "^8.56.1",
+    "@types/node": "^18.19.6",
     "@types/prettier": "^2.7.3",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.6",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.15.0"
